fixed button on mobile

--- a/assets/stylesheets/uhura/_dashboard.sass
+++ b/assets/stylesheets/uhura/_dashboard.sass
@@ -195,7 +195,12 @@ ul.episodes
           overflow: hidden
           text-overflow: ellipsis
           width: 100%
+          max-width: 100%
           height: 25px
+        div
+          width: 100%
+          overflow: hidden
+          margin-top: 5px
       .play-pause
         width: 15%
         height: 55px
@@ -203,6 +208,10 @@ ul.episodes
           margin-top: 30%
       button.more-info, button.listened
         text-align: center
+        width: 46%
+        margin: 0 2%
+        display: block
+        border: 1px solid #CCC
 
 @-webkit-keyframes playing
   0%, 20%, 80%, 100%
